add styles for selected card

--- a/src/components/styles/Rates.scss
+++ b/src/components/styles/Rates.scss
@@ -98,6 +98,7 @@
 }
 
 .selected {
-    height: 85px;
-    margin-top: -10px;
+    border: 3px solid red;
+    margin-top: -15px;
+    width: 270px;
 }
